--- a/app/prepdocs/PrepareDocs/Properties/launchSettings.json
+++ b/app/prepdocs/PrepareDocs/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PrepareDocs": {
       "commandName": "Project",
-      "commandLineArgs": "../../../../../../data/*.pdf\r\n--storageendpoint %AZURE_STORAGE_BLOB_ENDPOINT%\r\n--container %AZURE_STORAGE_CONTAINER%\r\n--searchendpoint %AZURE_SEARCH_SERVICE_ENDPOINT%\r\n--searchindex %AZURE_SEARCH_INDEX%\r\n--formrecognizerendpoint %AZURE_FORMRECOGNIZER_SERVICE_ENDPOINT%\r\n--tenantid %AZURE_TENANT_ID%\r\n--openaiendpoint %AZURE_OPENAI_ENDPOINT%\r\n--embeddingmodel %AZURE_OPENAI_EMBEDDING_DEPLOYMENT%\r\n-v"
+      "commandLineArgs": "../../../../../../data/*.pdf --storageendpoint https://stvhonz5mmzobzs.blob.core.windows.net/ --container content --searchendpoint https://gptkb-vhonz5mmzobzs.search.windows.net/ --searchindex gptkbindex --formrecognizerendpoint https://cog-fr-vhonz5mmzobzs.cognitiveservices.azure.com/ --tenantid 153e8119-0044-4452-9113-002b0aba1216 --openaiendpoint https://cog-vhonz5mmzobzs.openai.azure.com/ --embeddingmodel embedding -v"
     }
   }
 }
